# esp32-p4-graphical-bootloader

./: .gitignore  CMakeLists.txt  README.md  bootloader_api.c  bootloader_api.h  index.html  lv_conf.h  merge_flash_binary.sh  package.sh  partitions.csv  partitions_16mb.csv  sdkconfig.defaults  sdkconfig.defaults.esp32_p4_function_ev_board
.github/workflows/: launchpad-pages.yml  release.yml
bootloader_components/: CMakeLists.txt
bootloader_components/main/: CMakeLists.txt  bootloader_custom.c  bootloader_custom.h  bootloader_custom_minimal.c  bootloader_custom_simple.c  bootloader_custom_simple.h  bootloader_start.c  component.yml
esp32-image-composer-js/: index.html
esp32-image-composer-js/js/: binary-validator.js  flashing-controller.js  main.js  ota-manager.js  partition-generator.js  ui-components.js
launchpad/config/: config.toml
main/: CMakeLists.txt  Kconfig.projbuild  board_init.c  board_init.h  ek79007_stable_config.h  esp_app_format.h  esp_crc.h  esp_err.h  esp_flash.h  esp_flash_partitions.h  esp_log.h  esp_ota_ops.h  esp_partition.h  esp_system.h  esp_vfs_fat.h  factory_app.c  firmware_flasher.c  firmware_flasher.h  firmware_metadata.c  firmware_metadata.h  firmware_selector.c  firmware_selector.h  firmware_validator.c  firmware_validator.h  graphical_bootloader.c  hello.c  hello_original.c  idf_component.yml  lvgl_bootloader.c  lvgl_bootloader.h  main.c  nvs.h  nvs_flash.h  partition_manager.c  partition_manager.h  partition_visualizer.c  partition_visualizer.h  sd_ota.c  sd_ota.h  sdmmc.h  (+4 more)
main/bsp/: esp-bsp.h
main/driver/: sdmmc_host.h
main/freertos/: FreeRTOS.h  semphr.h  task.h
main/mbedtls/: md5.h
main/soc/: lp_system_reg.h
simulator/: CMakeLists.txt  build.sh  cli_inspector.c  cli_inspector.h  cli_parser.c  cli_parser.h  esp_mock_header.h  firmware_storage_config.h  main.c  run.sh
simulator/mocks/: bsp_mock.c  bsp_mock.h  esp_app_format.h  esp_crc.h  esp_err.h  esp_flash.h  esp_flash_mock.c  esp_flash_partitions.h  esp_log.h  esp_log_mock.c  esp_log_mock.h  esp_ota_ops.h  esp_ota_ops_mock.c  esp_ota_ops_mock.h  esp_partition.h  esp_partition_mock.c  esp_partition_mock.h  esp_system.h  esp_system_mock.c  esp_system_mock.h  esp_timer.h  esp_vfs_fat.h  firmware_flasher_mock.c  firmware_storage_mock.c  freertos_mock.c  freertos_mock.h  mbedtls_md5_mock.c  nvs.h  nvs_flash.h  nvs_mock.c  nvs_mock.h  sdmmc_cmd.h  sdmmc_mock.c  soc_reg.h  vfs_mock.c  vfs_mock.h
simulator/mocks/bsp/: esp-bsp.h
simulator/mocks/driver/: sdmmc_host.h
simulator/mocks/freertos/: FreeRTOS.h  semphr.h  task.h
simulator/mocks/mbedtls/: md5.h
simulator/mocks/soc/: lp_system_reg.h
simulator/platform/: crc32.c  crc32.h  flash_builder.c  flash_builder.h  flash_emulator.c  flash_emulator.h  lvgl_sdl_init.c  lvgl_sdl_init.h  nvs_generator.c  nvs_generator.h  partition_table.h
